very simple signals for bottons and timer interrupts based on callbacks; atmega8535 compatible

--- a/examples/CMakeLists.txt
+++ b/examples/CMakeLists.txt
@@ -1,2 +1,3 @@
-add_subdirectory ("music_player")
-add_subdirectory ("step_motor_driver")
+add_subdirectory("music_player")
+add_subdirectory("step_motor_driver")
+add_subdirectory("thermo_controller")
